# otclient

./: .dockerignore  .gitattributes  .gitignore  .reviewdog.yml  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Dockerfile  Dockerfile.browser  README.md  build_luajit_android.sh  init.lua  meta.lua  otclientrc.lua  vcpkg.json
.github/workflows/: analysis-sonarcloud.yml  build-adnroid-apk.yml  build-android.yml  build-docker.yml  build-macos.yml  build-ubuntu.yml  build-windows-solution.yml  build-windows.yml  ci.yml  reusable-build-android-apk.yml  reusable-build-browser.yml  reusable-build-docker.yml  reusable-build-linux.yml  reusable-build-macos.yml  reusable-build-windows.yml  reusable-checks.yml  reusable-tests-lua.yml  tests-linux.yml  update_vcpkg_baseline.yml
android/app/: build.gradle.kts
browser/triplets/: wasm32-emscripten-pthread.cmake
cmake/: android-ndk-no-gold.toolchain.cmake  clang-no-gold.sh  vcpkg_android.cmake
cmake/triplets/: x64-windows-static-debug.cmake  x86-windows-static-debug.cmake
data/: setup.otml
data/styles/: 10-buttons.otui  10-comboboxes.otui  10-windows.otui  30-miniwindow.otui  41-skilltree.otui  README.md  custom.css  html.css
docs/: client-assets-auto-install.md
docs/compiling/: compiling-on-windows-(cmake).md  compiling-on-windows-(visual-studio-solution).md
mods/client_mods/: mods.otmod
mods/game_bot/: bot.lua  bot.otui  executor.lua
mods/game_helper/: helper.lua
modules/client/: client.lua  client.otmod
modules/client_assets/: client_assets.lua
modules/client_bottommenu/: bottommenu.lua
modules/client_claydemo/: claydemo.lua  claydemo.otmod  claydemo.otui
modules/client_entergame/: characterlist.lua  characterlist.otui  entergame.lua
modules/client_options/: data_options.lua  keybins.lua  options.lua
modules/client_terminal/: terminal.lua
modules/corelib/: const.lua  uiprogressbarsd.lua  uiprogressbarsdinverted.lua  util.lua
modules/game_actionbar/: game_actionbar.lua
modules/game_blessing/: blessing.lua
modules/game_compendium/: compendium.json  compendium.lua  compendium.otmod  compendium.otui  format_messages.py  game_compendium.html  game_compendium.lua  game_compendium.otmod
modules/game_console/: console.lua  console.otui  exiva_option.html  exiva_option.lua
modules/game_containers/: container.otui  containers.lua
modules/game_cooldown/: cooldown.lua
modules/game_cyclopedia/: cyclopedia_widgets.otui  game_cyclopedia.lua  game_cyclopedia.otmod  houses_data.lua  utils.lua
modules/game_features/: features.lua
modules/game_forge/: game_forge.css  game_forge.lua
modules/game_healthcircle/: game_healthcircle.lua  statusiconbar.lua
modules/game_highscore/: game_highscore.lua
modules/game_hotkeys/: hotkeys_manager.lua
modules/game_htmlsample/: htmlsample.css  htmlsample.html  htmlsample.lua
modules/game_imbui/: t_imbui.lua
modules/game_imbuing/: imbuing.lua  imbuing.otmod
modules/game_prey/: prey.lua  (+1 more)
src/: CMakeLists.txt  main.cpp
src/client/: animator.cpp  animator.h  attachedeffect.cpp  attachedeffect.h  client.cpp  const.h  creature.cpp  creature.h  creatures.cpp  declarations.h  game.cpp  game.h  gameconfig.h  item.cpp  item.h  localplayer.cpp  localplayer.h  luafunctions.cpp  luavaluecasts_client.cpp  luavaluecasts_client.h  map.cpp  map.h  mapio.cpp  mapview.cpp  minimap.cpp  minimap.h  paperdoll.cpp  protocolcodes.h  protocolgame.cpp  protocolgame.h  protocolgameparse.cpp  protocolgamesend.cpp  satellitemap.cpp  satellitemap.h  shadermanager.cpp  spritemanager.cpp  spritemanager.h  staticdata.h  thing.cpp  thing.h  (+11 more)
src/framework/: const.h  luafunctions.cpp  pch.h
src/framework/core/: asyncdispatcher.cpp  asyncdispatcher.h  consoleapplication.cpp  declarations.h  logger.cpp  module.cpp  module.h  modulemanager.cpp  resourcemanager.cpp  resourcemanager.h  unzipper.cpp
src/framework/graphics/: apng_png.hpp  apngloader.cpp  apngloader.h  bitmapfont.cpp  declarations.h  fontmanager.cpp  image.cpp  image.h  painter.cpp  paintershaderprogram.cpp  particlemanager.cpp  shader.cpp  shadermanager.cpp  shaderprogram.cpp  texture.cpp  texturemanager.cpp  ttfloader.cpp
src/framework/html/: cssparser.cpp  cssparser.h  htmlmanager.cpp  htmlparser.cpp
src/framework/input/: mouse.cpp
src/framework/luaengine/: declarations.h  luainterface.cpp  luainterface.h  luaobject.h  luavaluecasts.h
src/framework/net/: connection.cpp  declarations.h  httplogin.cpp  httplogin.h  inputmessage.h  protocol.cpp  protocol.h  protocolhttp.cpp  protocolhttp.h
src/framework/otml/: declarations.h  otmldocument.h  otmlparser.cpp
src/framework/platform/: androidmanager.cpp  androidmanager.h  androidwindow.cpp  browserwindow.cpp  cocoawindow.h  cocoawindow.mm  platform.h  platformwindow.cpp  platformwindow.h  unixplatform.cpp  win32platform.cpp  win32window.cpp  x11window.cpp  x11window.h
src/framework/proxy/: proxy_client.cpp
src/framework/sound/: combinedsoundsource.cpp  declarations.h  oggsoundfile.cpp  soundbuffer.cpp  soundchannel.cpp  soundeffect.cpp  soundmanager.cpp  soundmanager.h  soundmanager_debug.cpp  soundmanager_itemambience.cpp  soundmanager_protocol.cpp  soundmanager_types.h  soundsource.cpp  soundsource.h  streamsoundsource.cpp  streamsoundsource.h
src/framework/stdext/: cast.h  demangle.cpp  demangle.h  exception.h  hash.h  math.cpp  math.h  net.h  qrcodegen.cpp  storage.h  string.cpp  string.h  thread.h  time.cpp  traits.h  types.h  uri.cpp  uri.h
src/framework/ui/: declarations.h  ui.h  uianchorlayout.cpp  uiclaylayout.cpp  uiclaylayout.h  uilayout.h  uilayoutflexbox.cpp  uimanager.cpp  uitextedit.cpp  uitranslator.h  uiwidget.cpp  uiwidget.h  uiwidgetbasestyle.cpp  uiwidgethtml.cpp  uiwidgettext.cpp
src/framework/util/: color.cpp  color.h  crypt.cpp  crypt.h  matrix.h  point.h  rect.h  size.h  spinlock.h  stats.cpp
src/protobuf/: CMakeLists.txt  appearances.proto  map.proto
src/tools/: datdump.cpp
tests/: CMakeLists.txt
tools/: generate_cyclopedia_houses_lua.py
vc17/: otclient.vcxproj  settings.props
vc18/: otclient.vcxproj  settings.props
(+164 files in other folders)
